# localvoice

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: localvoice.desktop
packaging/: PKGBUILD
src/localvoice/: __init__.py  cli.py  clipboard.py  commands.py  config.py  doctor.py  gui.py  hypr_config.py  hyprland.py  ipc.py  pipewire.py  service.py  transcriber.py  tts.py  vad.py
tests/: test_cli.py  test_clipboard.py  test_gui.py  test_hyprland.py  test_pipewire.py  test_service.py  test_transcriber.py  test_vad.py
